# oisy-wallet

./: .gitignore  HACKING.md  package-lock.json  package.json  project_instructions.md
btc-ckbtc-wallet/: .env.test  .gitignore  .nycrc  Cargo.toml  LICENSE  README.md  dfx.json  package-lock.json  package.json  playwright.config.ts  svelte.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
btc-ckbtc-wallet/.github/workflows/: ci.yml  preview.yml
btc-ckbtc-wallet/scripts/: deploy-ic.sh  deploy-local.sh
btc-ckbtc-wallet/src/backend/: Cargo.toml  wallet_backend.did
btc-ckbtc-wallet/src/backend/src/: bitcoin.rs  ckbtc.rs  lib.rs  types.rs
btc-ckbtc-wallet/src/basic_bitcoin/: dfx.json
btc-ckbtc-wallet/src/declarations/wallet_backend/: index.ts  wallet_backend.did.d.ts  wallet_backend.did.ts
btc-ckbtc-wallet/src/frontend/: index.html
btc-ckbtc-wallet/src/frontend/src/: App.svelte  index.html  main.ts  vite-env.d.ts
btc-ckbtc-wallet/src/frontend/src/components/: AuthGuard.svelte  BalanceDisplay.svelte  BalanceDisplay.test.ts  ConversionHistory.svelte  NetworkPreference.svelte  WalletHeader.svelte
btc-ckbtc-wallet/src/frontend/src/e2e/: auth.spec.ts
btc-ckbtc-wallet/src/frontend/src/lib/: api.js  api.ts  wallet.did.js
btc-ckbtc-wallet/src/frontend/src/lib/stores/: auth.js  auth.ts  test-stores.ts  wallet.js  wallet.ts
btc-ckbtc-wallet/src/frontend/src/test/: setup.ts  utils.ts
requirements/: frontend_instructions.md
src/frontend/src/routes/(app)/: +page.svelte
(+11 files in other folders)
